split out some tests, small improvements